[package]
name = "exoshell"
description = "Full-terminal command execution ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["rt", "macros"] }
tokio-childstream = "0.1.0"
